--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <p1>WAWAWAWAAW
-        
-    </p1>
+    <div>a </div>   
+    <div>b </div>   
+    <div>c </div>  
 </body>
 </html>
